# implied-expectations

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: make_fixture.py
src/implied_expectations/: __init__.py  boothcheck.py  cli.py  edgar.py  model.py  solver.py
tests/: test_edgar.py  test_golden.py  test_model.py  test_solver.py
tests/fixtures/: companyfacts-AAPL.json  companyfacts-NVDA.json
